<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.enterdev.eaglesprototype.MainActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar">
    </include>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="75dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="75dp">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/imageView"
            android:background="@drawable/es6"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/imgLogin"
            android:adjustViewBounds="false"
            android:cropToPadding="true"
            android:baselineAlignBottom="false"
            android:clickable="false"
            android:foregroundGravity="center_vertical"
            android:scaleType="centerCrop" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:paddingTop="50dp">

        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/etEmail"
            android:paddingTop="20dp"
            android:hint="@string/hintEmail"
            android:gravity="center_horizontal"
            android:background="@drawable/editext"
            android:layout_gravity="center_horizontal">
            <requestFocus/>
        </EditText>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="10dp"></LinearLayout>

        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPassword"
            android:paddingTop="20dp"
            android:hint="@string/hintPassword"
            android:gravity="center_horizontal"
            android:background="@drawable/editext"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="10dp"></LinearLayout>

        <Button
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:text="@string/ingresar"
            android:id="@+id/btnIngresar"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/buttons"
            android:textColor="@color/white"
            android:onClick="ingreso"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linkEnterdev"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"/>

</LinearLayout>
